some modification on data_load.py and test_data_loading.py

--- a/notebooks/eda.ipynb
+++ b/notebooks/eda.ipynb
@@ -45,7 +45,7 @@
     "\n",
     "print(sys.path)\n",
     "# Now try to import the module\n",
-    "from src import data_processing"
+    "from src import data_load"
    ]
   },
   {
@@ -66,8 +66,8 @@
    ],
    "source": [
     "from importlib import reload\n",
-    "import src.data_processing\n",
-    "reload(src.data_processing)"
+    "import src.data_load\n",
+    "reload(src.data_load)"
    ]
   },
   {
@@ -83,7 +83,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "from src.data_processing import load_fraud_data, load_address_data, load_creditcard_data"
+    "from src.data_load import load_fraud_data, load_address_data, load_creditcard_data"
    ]
   },
   {
